--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -1,4 +1,5 @@
 #labels Phase-Deploy
+=Installing the library=
 The library consists of two Eclipse projects that can be imported easily. Once downloaded, an archive can be imported using `File->Import->Existing project into workspace`. You can then either give the path of the archive or extract the data manually and then point to that directory.
 
 == gdx2d-desktop ==
