--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -5,5 +5,6 @@
   * [Introduction What is gdx2d]
      * [Presentation A nice presentation of the lib]
      * [Install Installing the library]
+     * [Definitions Definitions of terms used in the lib]
   * [Screenshots Screenshots]
   * [Improvements Future things we are working on]
