--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -1,5 +1,7 @@
 #summary What is gdx2d?
 
+=*THIS PAGE IS NO LONGER MAINTAINED, PLEASE GO TO https://github.com/pmudry/gdx2d FOR AN UP TO DATE VERSION*=
+
 = Introduction =
 
 This page describes the gdx2d library which can be used to simplify the development of 2D games on Android and desktop computers (on Mac, Windows or Linux). 
