Edited wiki page Install through web user interface.

--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -1,6 +1,9 @@
 #summary How to install the library and use it?
 #labels Phase-Deploy
 
+=*THIS PAGE IS NO LONGER MAINTAINED, PLEASE GO TO https://github.com/pmudry/gdx2d FOR AN UP TO DATE VERSION*=
+
+
 =Installing the library=
 The library consists of two Eclipse projects that can be imported easily. Once downloaded, an archive can be imported using `File->Import->Existing project into workspace`. You can then either give the path of the archive or extract the data manually and then point to that directory.
 
